# models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-04-17T23:17:17+00:00
+#   timestamp: 2025-04-18T04:36:40+00:00
 
 from __future__ import annotations
 
